--- a/package.json
+++ b/package.json
@@ -4,8 +4,19 @@
   "description": "My template project Vue application",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "build-dev": "webpack --mode development",
+    "build-prod": "webpack --mode production",
+    "serve": "webpack serve --open --mode development"
+
   },
   "author": "Petikov Vladimir",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+  },
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.0"
+  }
 }
+
