--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "My template project Vue application",
   "main": "index.js",
   "scripts": {
-    "build-dev": "webpack --mode development",
-    "build-prod": "webpack --mode production",
-    "serve": "webpack serve --open --mode development"
-
+    "build-dev": "set NODE_ENV=development&&webpack",
+    "build-prod": "set NODE_ENV=production&&webpack",
+    "serve": "set NODE_ENV=development&&webpack serve --open"
   },
   "author": "Petikov Vladimir",
   "license": "MIT",
-  "dependencies": {
-  },
   "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.0",
+    "sass": "^1.54.5",
+    "sass-loader": "^13.0.2",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0"
   }
 }
-
