--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
   "scripts": {
     "build-dev": "set NODE_ENV=development&&webpack",
     "build-prod": "set NODE_ENV=production&&webpack",
-    "serve": "set NODE_ENV=development&&webpack serve --open"
+    "serve": "set NODE_ENV=development&&webpack serve --open --live-reload"
   },
   "author": "Petikov Vladimir",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.1",
     "postcss-preset-env": "^7.8.0",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
     "sass": "^1.54.5",
     "sass-loader": "^13.0.2",
-    "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
