--- a/package.json
+++ b/package.json
@@ -22,11 +22,18 @@
     "postcss-preset-env": "^7.8.0",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.1.0",
+    "raw-loader": "^4.0.2",
     "sass": "^1.54.5",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.7.9",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0"
+  },
+  "dependencies": {
+    "vue": "^3.2.37"
   }
 }
